--- a/series-video-1/infiniti/1x6.html
+++ b/series-video-1/infiniti/1x6.html
@@ -16,7 +16,7 @@
     </style>
 
 	<video controls autoplay poster="https://www.themoviedb.org/t/p/original/m4Stmu3Xdbk0Dn7ypvS3iKmOORN.jpg">
-  <source src="//redirector.gdrivecdn.me/drive/index.php?id=Msbk%2FILughvE%2BhSxINhZTg7NJt68Glh%2BJQXl9WLK8rSljlhAIlLj8UOPOOOqBqszI0iMz7pjVPZBeoCAJ6faK2kaAFxAlCnRpL86EKbrC%2Fx%2FEk%2FJBU%2B4ZMSq8WEq2kw57BqS48DsX5EyYozIQsDMMVGlyGeVIvlTl%2FTm%2BU8puM5iTcZcQMI%2BUddO9GXM%2Bd3yMhskwoQaCW1iKyCjCr5uXeZbJWFkihSncuC3iGmXFpjA%3D%3D&ref=&sandbox=&t=1665633786244&ref=&res=1080" type="video/mp4">
+  <source src="https://rr4---sn-cvb7lnee.c.drive.google.com/videoplayback?expire=1665684021&ei=9RlIY7-_HfOCu7AP0eud6Aw&ip=186.102.50.121&cp=QVRLV0dfU1BQQlhPOmRBaUJwbDhQT2JVZEY2UlFLbGxtRC05Y1lKOE1sT2JacEdQOUZTdFhXTGs&id=8df0952a52e6f6f3&itag=37&source=webdrive&requiressl=yes&mh=1v&mm=32&mn=sn-cvb7lnee&ms=su&mv=m&mvi=4&pl=18&sc=yes&ttl=transient&susc=dr&driveid=1ThpEhpxfdd15WS0vpUij_lDAKzhQvKAB&app=explorer&mime=video/mp4&vprv=1&prv=1&dur=3473.403&lmt=1664854914702256&mt=1665669169&subapp=DRIVE_WEB_FILE_VIEWER&txp=0011224&sparams=expire,ei,ip,cp,id,itag,source,requiressl,ttl,susc,driveid,app,mime,vprv,prv,dur,lmt&sig=AOq0QJ8wRAIgSrjwG_Y732N8QnPlTRHP91guTV9twwytz66hC0NGs9kCIADqS5Mse6AS4hcr0_4_anlyz1vioKZ22ss2_2Bh75Ua&lsparams=mh,mm,mn,ms,mv,mvi,pl,sc&lsig=AG3C_xAwRQIhAM0JY0BZIocONJqAm-hCdGL1vAVUDqJufrJJ6I3jYrgNAiBQ2h_e6nh1lx1s43pfxwuUQ6Mzm55AYqb1_BenAjM7ng==&cpn=XY8C6fG9NWk5jU4O&c=WEB_EMBEDDED_PLAYER&cver=1.20221011.01.01" type="video/mp4">
   </video> 
 
     
